
# Common flags...
SET(PROG_JOT_LIBS mesh mlib disp geom net std dlhandler dev libpng zlib sps glew)
SET(PROG_LIBS ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})

#
# Program 1 - m2sm
#
ADD_EXECUTABLE(m2sm EXCLUDE_FROM_ALL m2sm.C)
TARGET_LINK_LIBRARIES(m2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(m2sm ${PROG_LIBS})

#
# Program 2 - ply2sm
#
ADD_EXECUTABLE(ply2sm EXCLUDE_FROM_ALL ply2sm.C ply.C)
TARGET_LINK_LIBRARIES(ply2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(ply2sm ${PROG_LIBS})

#
# Program 3 - sm2iv
#
ADD_EXECUTABLE(sm2iv EXCLUDE_FROM_ALL sm2iv.C)
TARGET_LINK_LIBRARIES(sm2iv ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(sm2iv ${PROG_LIBS})

#
# Program 4 - iv2sm (not tested lately...)
#
ADD_EXECUTABLE(iv2sm EXCLUDE_FROM_ALL iv2sm.C)
TARGET_LINK_LIBRARIES(iv2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(iv2sm ${PROG_LIBS})
TARGET_LINK_LIBRARIES(iv2sm ${OPENINVENTOR_LIBRARY})

#
# Program 5 - sm2obj
#
ADD_EXECUTABLE(sm2obj EXCLUDE_FROM_ALL sm2obj.C)
TARGET_LINK_LIBRARIES(sm2obj ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(sm2obj ${PROG_LIBS})

#
# Program 6 - obj2sm
#
ADD_EXECUTABLE(obj2sm EXCLUDE_FROM_ALL obj2sm.C)
TARGET_LINK_LIBRARIES(obj2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(obj2sm ${PROG_LIBS})

#
# Program 7 - png2sm
#
ADD_EXECUTABLE(png2sm EXCLUDE_FROM_ALL png2sm.C)
TARGET_LINK_LIBRARIES(png2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(png2sm ${PROG_LIBS})

#
# Program 8 - obj2jot
#
ADD_EXECUTABLE(obj2jot EXCLUDE_FROM_ALL obj2jot.C)
TARGET_LINK_LIBRARIES(obj2jot ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(obj2jot ${PROG_LIBS})

