
# Common flags...
SET(PROG_JOT_LIBS mesh mlib disp geom net std dlhandler dev sps glew)
SET(PROG_LIBS ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${PNG_LIBRARIES})

#
# Program 1 - m2sm
#
ADD_EXECUTABLE(m2sm m2sm.C)
TARGET_LINK_LIBRARIES(m2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(m2sm ${PROG_LIBS})
INSTALL(TARGETS m2sm DESTINATION bin)

#
# Program 2 - ply2sm
#
ADD_EXECUTABLE(ply2sm ply2sm.C ply.C)
TARGET_LINK_LIBRARIES(ply2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(ply2sm ${PROG_LIBS})
INSTALL(TARGETS ply2sm DESTINATION bin)

# TODO: Check for OpenInventor somehow
IF(FALSE)
SET_PROPERTY(TARGET sm2iv iv2sm
	PROPERTY INCLUDE_DIRECTORIES
	${OPENINVENTOR_INCLUDE_DIR})

#
# Program 3 - sm2iv
#
ADD_EXECUTABLE(sm2iv sm2iv.C)
TARGET_LINK_LIBRARIES(sm2iv ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(sm2iv ${PROG_LIBS})
TARGET_LINK_LIBRARIES(sm2iv ${OPENINVENTOR_LIBRARY})
INSTALL(TARGETS sm2iv DESTINATION bin)

#
# Program 4 - iv2sm (not tested lately...)
#
ADD_EXECUTABLE(iv2sm iv2sm.C)
TARGET_LINK_LIBRARIES(iv2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(iv2sm ${PROG_LIBS})
TARGET_LINK_LIBRARIES(iv2sm ${OPENINVENTOR_LIBRARY})
INSTALL(TARGETS iv2sm DESTINATION bin)
ENDIF(FALSE)

#
# Program 5 - sm2obj
#
ADD_EXECUTABLE(sm2obj sm2obj.C)
TARGET_LINK_LIBRARIES(sm2obj ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(sm2obj ${PROG_LIBS})
INSTALL(TARGETS sm2obj DESTINATION bin)

#
# Program 6 - obj2sm
#
ADD_EXECUTABLE(obj2sm obj2sm.C)
TARGET_LINK_LIBRARIES(obj2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(obj2sm ${PROG_LIBS})
INSTALL(TARGETS obj2sm DESTINATION bin)

#
# Program 7 - png2sm
#
ADD_EXECUTABLE(png2sm png2sm.C)
TARGET_LINK_LIBRARIES(png2sm ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(png2sm ${PROG_LIBS})
INSTALL(TARGETS png2sm DESTINATION bin)

#
# Program 8 - obj2jot
#
ADD_EXECUTABLE(obj2jot obj2jot.C)
TARGET_LINK_LIBRARIES(obj2jot ${PROG_JOT_LIBS})
TARGET_LINK_LIBRARIES(obj2jot ${PROG_LIBS})
INSTALL(TARGETS obj2jot DESTINATION bin)

