
SET(LIBPNG_FILES
	png.C
	pngerror.C
	pngget.C
	pngmem.C 
	pngpread.C
	pngread.C
	pngrio.C
	pngrtran.C
	pngrutil.C
	pngset.C
	pngtrans.C
	pngvcrd.C
	pnggccrd.C
	pngwio.C
	pngwrite.C
	pngwtran.C
	pngwutil.C)

ADD_LIBRARY(libpng ${LIBPNG_FILES})

SET_PROPERTY(
	SOURCE ${LIBPNG_FILES}
	APPEND
	PROPERTY INCLUDE_DIRECTORIES
	${PROJECT_SOURCE_DIR}/zlib)

SET_PROPERTY(
	SOURCE ${LIBPNG_FILES}
	APPEND
	PROPERTY COMPILE_DEFINITIONS
	PNG_NO_CONSOLE_IO)

IF(WIN32)
SET_PROPERTY(
	SOURCE ${LIBPNG_FILES}
	APPEND
	PROPERTY COMPILE_DEFINITIONS
	PNG_USE_PNGVCRD)
ENDIF(WIN32)

IF(UNIX)
SET_PROPERTY(
	SOURCE ${LIBPNG_FILES}
	APPEND
	PROPERTY COMPILE_DEFINITIONS
	PNG_THREAD_UNSAFE_OK)
ENDIF(UNIX)

#Compile as C (not C++)
SET_SOURCE_FILES_PROPERTIES(${LIBPNG_FILES} PROPERTIES LANGUAGE "C" COMPILE_FLAGS "-x c")

