
SET(TRIANGLE_FILES
	triangle.C)

ADD_LIBRARY(triangle ${TRIANGLE_FILES})

SET_PROPERTY(
	SOURCE ${TRIANGLE_FILES}
	APPEND
	PROPERTY INCLUDE_DIRECTORIES
	${PROJECT_SOURCE_DIR}/zlib)

SET_PROPERTY(
	SOURCE ${TRIANGLE_FILES}
	APPEND
	PROPERTY COMPILE_DEFINITIONS
	TRILIBRARY ANSI_DECLARATORS)

IF(WIN32)
SET_PROPERTY(
	SOURCE ${TRIANGLE_FILES}
	APPEND
	PROPERTY COMPILE_DEFINITIONS
	NO_TIMER)
ENDIF(WIN32)

#Compile as C (not C++)
SET_SOURCE_FILES_PROPERTIES(${TRIANGLE_FILES} PROPERTIES LANGUAGE "C" COMPILE_FLAGS "-x c")

