
SET(TRIANGLE_FILES
	triangle.c)

ADD_LIBRARY(triangle ${TRIANGLE_FILES})

SET_PROPERTY(
	SOURCE ${TRIANGLE_FILES}
	APPEND
	PROPERTY INCLUDE_DIRECTORIES
	${PROJECT_SOURCE_DIR}/zlib)

SET_PROPERTY(
	SOURCE ${TRIANGLE_FILES}
	APPEND
	PROPERTY COMPILE_DEFINITIONS
	TRILIBRARY ANSI_DECLARATORS)

IF(WIN32)
SET_PROPERTY(
	SOURCE ${TRIANGLE_FILES}
	APPEND
	PROPERTY COMPILE_DEFINITIONS
	NO_TIMER)
ENDIF(WIN32)

