
SET(NORMAL_SOURCES
	global.C
	points.C
	vec4.C)

SET(TEMPLATED_SOURCES
	plane.C
	pointlist.C
	point2.C
	point3.C
	mat4.C
	quat.C
	random.C)

SET(JOT_NEEDS_TEMPLATES_IN_H_FILE BOOL False)

IF(WIN32)
SET(JOT_NEEDS_TEMPLATES_IN_H_FILE BOOL True)
ENDIF(WIN32)

IF(UNIX)
SET(JOT_NEEDS_TEMPLATES_IN_H_FILE BOOL True)
ENDIF(UNIX)

IF(NOT JOT_NEEDS_TEMPLATES_IN_H_FILE)
SET(MLIB_FILES ${NORMAL_SOURCES} ${TEMPLATED_SOURCES})
ELSE(NOT JOT_NEEDS_TEMPLATES_IN_H_FILE)
SET(MLIB_FILES ${NORMAL_SOURCES})
ENDIF(NOT JOT_NEEDS_TEMPLATES_IN_H_FILE)

ADD_LIBRARY(mlib ${MLIB_FILES})

TARGET_LINK_LIBRARIES(mlib
	std)

