
ADD_LIBRARY(npr
	npr_view.cpp
	sil_and_crease_texture.cpp
	zxedge_stroke_texture.cpp
	zxkey_line.cpp
	feature_stroke_texture.cpp
	hatching_collection.cpp
	hatching_group_base_.cpp
	hatching_group_fixed.cpp
	hatching_group_free.cpp
	hatching_group.cpp
	npr_texture.cpp
	ffstexture.cpp
	ffs_control_frame.cpp
	npr_solid_texture.cpp
	npr_bkg_texture.cpp
	npr_control_frame.cpp
	wpath_stroke.cpp
	stylized_line3d.cpp
	image_proc.cpp
	skybox_texture.cpp
	img_line.cpp
	binary_image.cpp
	ridge.cpp
	img_line_shader.cpp
	simple_img_line_shader.cpp
	image_plate.cpp)

TARGET_LINK_LIBRARIES(npr
	base_jotapp
	disp
	geom
	gtex
	manip
	mesh
	mlib
	net
	pattern
	proxy_pattern
	stroke
	wnpr
	${OPENGL_LIBRARIES})

